# advent_of_code_2024

./: .gitignore  README.md  advent-of-code2024.cabal
2024/day01/: solution.hs
2024/day02/: solution.hs
2024/day03/: day03.cabal
2024/day03/app/: Main.hs
app/: Main.hs
practice/2021/day01/: solution.hs
practice/2021/day02/: solution.hs
practice/2021/day03/: solution.hs
practice/2021/day04/: solution.hs
practice/2021/day05/: solution.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
