cabal-version:      3.0
name:               advent-of-code2024
version:            0.1.0.0
license:            NONE
build-type:         Simple

common warnings
    ghc-options: -Wall

executable advent-of-code2024
    import:           warnings
    main-is:          Main.hs
    other-modules:    Day01,
                      Day02,
                      Day03,
                      Day04,
                      Day05
    build-depends:    base ^>= 4.17.2.1,
                      regex-tdfa ^>= 1.3.2.2,
                      hint ^>= 0.9.0.8
    hs-source-dirs:   app, src
    default-language: Haskell2010
