cabal-version:      3.0
name:               advent-of-code2024
version:            0.1.0.0
license:            NONE
build-type:         Simple

common warnings
    ghc-options: -Wall

executable advent-of-code2024
    import:           warnings
    main-is:          Main.hs
    other-modules:    Day01,
                      Day02,
                      Day03,
                      Day04,
                      Day05,
                      Day06,
                      Day07,
                      Day08,
                      Day09,
                      Day10,
                      Day11,
                      Day12,
                      Day13,
                      Day14,
                      Day15,
                      Day16,
                      Day17,
                      Day18,
                      Day19,
                      Day20,
                      Day21,
                      Day22,
                      Day23
    build-depends:    base,
                      containers,
                      split,
                      regex-tdfa,
                      heap,
                      MemoTrie
    hs-source-dirs:   app, src
    default-language: Haskell2010
